--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma": "^0.13.19",
     "karma-babel-preprocessor": "^6.0.1",
     "karma-browserify": "^4.4.0",
+    "karma-chrome-launcher": "^0.2.2",
     "karma-cli": "^0.1.1",
     "karma-mocha": "^0.2.0",
     "karma-phantomjs-launcher": "^0.2.1",
@@ -55,7 +56,7 @@
     "phantomjs-polyfill": "^0.0.1",
     "power-assert": "^1.1.0",
     "react": "^0.14.7",
-    "react-addons-test-utils": "^0.14.3",
+    "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
     "sinon": "^1.17.2",
     "watchify": "^3.7.0"
