--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:watch": "karma start --auto-watch --no-single-run",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile",
-    "lint": "eslint src"
+    "lint": "eslint src test karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -39,9 +39,10 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "enzyme": "^2.0.0",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.0",
-    "eslint-plugin-react": "^3.16.1",
+    "eslint": "2.2.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-mocha": "^2.0.0",
+    "eslint-plugin-react": "^4.2.0",
     "espower-babel": "^3.3.0",
     "husky": "^0.11.1",
     "karma": "^0.13.19",
@@ -50,10 +51,9 @@
     "karma-chrome-launcher": "^0.2.2",
     "karma-cli": "^0.1.1",
     "karma-mocha": "^0.2.0",
-    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-phantomjs-launcher": "^1.0.0",
     "mocha": "^2.3.3",
-    "phantomjs": "^1.9.18",
-    "phantomjs-polyfill": "^0.0.1",
+    "phantomjs-prebuilt": "^2.1.5",
     "power-assert": "^1.1.0",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
