--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "enzyme": "^2.0.0",
-    "eslint": "2.2.0",
-    "eslint-config-airbnb": "^6.1.0",
-    "eslint-plugin-mocha": "^2.0.0",
-    "eslint-plugin-react": "^4.2.0",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-mocha": "^3.0.0",
+    "eslint-plugin-react": "^5.2.2",
     "espower-babel": "^3.3.0",
     "husky": "^0.11.1",
     "karma": "^0.13.19",
